# spindle

./: .gitignore  Pipfile  README.md  example.py  pyproject.toml
spindle/: async_spindle.py  async_spool.py  spindle.py  spool.py
tests/: test_spool.py
