[project]
name = "spindle"
description = "API & cloud agnostic library for extensibly orchestrating relational actions using cloud functions."
license = { text = "MIT" }
requires-python = ">=3.8"
authors = []
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []
dynamic = ["readme", "version"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
